--- a/BlankCordovaApp1/BlankCordovaApp1/templates/menu.html
+++ b/BlankCordovaApp1/BlankCordovaApp1/templates/menu.html
@@ -1,6 +1,6 @@
 ﻿<ion-side-menus enable-menu-with-back-views="false">
     <ion-side-menu-content>
-        <ion-nav-bar class="bar-stable" id="menu">
+        <ion-nav-bar class="bar-positive" id="menu">
             <ion-nav-back-button style="color:white;">
             </ion-nav-back-button>
             <ion-nav-buttons side="left">
@@ -11,7 +11,7 @@
     </ion-side-menu-content>
 
     <ion-side-menu side="left" id="menu">
-        <ion-header-bar class="bar-stable">
+        <ion-header-bar class="bar-positive">
             <h1 class="title">Settings</h1>
         </ion-header-bar>
         <ion-content>
