--- a/BlankCordovaApp1/BlankCordovaApp1/templates/home.html
+++ b/BlankCordovaApp1/BlankCordovaApp1/templates/home.html
@@ -1,9 +1,9 @@
 ﻿<ion-view view-title="Previous Trips">
     <ion-content>
         <ion-list>
-            <ion-item class="item-remove-animate item item-icon-left" ng-repeat="trips in previousTrips track by $index">
-                <i class="icon ion-android-car"></i>
-                {{trips.from}}->{{trips.to}}
+            <ion-item class="item-remove-animate item item-icon-left" ng-repeat="trip in previousTrips track by $index">
+                <i class="icon ion-android-{{trip.type}}"></i>
+                {{trip.from}}->{{trip.to}}
                 <ion-option-button class="button-assertive" ng-click="deleteTrip($index)">
                     Delete
                 </ion-option-button>
