--- a/BlankCordovaApp1/BlankCordovaApp1/templates/home.html
+++ b/BlankCordovaApp1/BlankCordovaApp1/templates/home.html
@@ -1,13 +1,18 @@
 ﻿<ion-view view-title="Previous Trips">
     <ion-content>
         <ion-list>
-            <ion-item class="item-remove-animate item item-icon-left" ng-repeat="trip in previousTrips track by $index">
-                <i class="icon ion-android-{{trip.type}}"></i>
-                {{trip.from}}->{{trip.to}}
-                <ion-option-button class="button-assertive" ng-click="deleteTrip($index)">
-                    Delete
-                </ion-option-button>
-            </ion-item>
+            <div ng-repeat="trip in previousTrips track by $index">
+                <ion-item class="item-remove-animate item item-icon-left " ng-click="toggleTrip(trip)" ng-class="{active: isTripShown(trip)}">
+                    <i class="icon ion-android-{{trip.type}}"></i>
+                    {{trip.from}}   <i class="ion-arrow-right-a"></i>   {{trip.to}}
+                    <ion-option-button class="button-assertive" ng-click="deleteTrip($index)">
+                        Delete
+                    </ion-option-button>
+                </ion-item>
+                <ion-item style="height:200px;" class="item-accordion" ng-show="isTripShown(trip)">
+                    Hello World
+                </ion-item>
+            </div>
         </ion-list>
     </ion-content>
 </ion-view>
