--- a/BlankCordovaApp1/BlankCordovaApp1/templates/menu.html
+++ b/BlankCordovaApp1/BlankCordovaApp1/templates/menu.html
@@ -12,7 +12,7 @@
 
     <ion-side-menu side="left" id="menu">
         <ion-header-bar class="bar-positive">
-            <h1 class="title">Destination</h1>
+            <h1 class="title">Your Trip</h1>
         </ion-header-bar>
         <ion-content scroll="flase">
             <ion-list stlye=>
@@ -33,9 +33,11 @@
                     <label class="item item-input">
                         <input type="time" ng-model="trip.time" placeholder="Time">
                     </label>
-                    <ion-radio style="width:50%;float:left;height:60px;" ng-model="trip.type" ng-value="'car'"><i class="icon ion-android-car"></i></ion-radio>
-                    <ion-radio style="width:50%;float:left;height:60px;" ng-model="trip.type" ng-value="'bus'"><i class="icon ion-android-bus"></i></ion-radio>
-                    <button type="submit" class="button button-positive" menu-toggle="left">Search</button>
+                    <label class="item item-input" style="margin:0;padding:0;">
+                        <ion-radio style="width:51%;float:left;" ng-model="trip.type" ng-value="'car'"><i class="icon ion-android-car"></i></ion-radio>
+                        <ion-radio style="width:51%;float:left;" ng-model="trip.type" ng-value="'bus'"><i class="icon ion-android-bus"></i></ion-radio>
+                    </label>
+                        <button type="submit" class="button button-positive" menu-toggle="left">Search</button>
                 </form>
         </ion-list>
         </ion-content>
