--- a/BlankCordovaApp1/BlankCordovaApp1/templates/home.html
+++ b/BlankCordovaApp1/BlankCordovaApp1/templates/home.html
@@ -10,7 +10,8 @@
                     </ion-option-button>
                 </ion-item>
                 <ion-item style="height:200px;" class="item-accordion" ng-show="isTripShown(trip)">
-                    Hello World
+                    Details
+                    <button class="button button-positive">More Details</button>
                 </ion-item>
             </div>
         </ion-list>
