--- a/BlankCordovaApp1/BlankCordovaApp1/templates/home.html
+++ b/BlankCordovaApp1/BlankCordovaApp1/templates/home.html
@@ -1,17 +1,23 @@
 ﻿<ion-view view-title="Previous Trips">
     <ion-content>
         <ion-list>
+            
             <div ng-repeat="trip in previousTrips track by $index">
                 <ion-item class="item-remove-animate item item-icon-left " ng-click="toggleTrip(trip)" ng-class="{active: isTripShown(trip)}">
                     <i class="icon ion-android-{{trip.type}}"></i>
-                    {{trip.from}}   <i class="ion-arrow-right-a"></i>   {{trip.to}}
+                    {{trip.fra}}   <i class="ion-arrow-right-a"></i><br />
+                    {{trip.to}}
                     <ion-option-button class="button-assertive" ng-click="deleteTrip($index)">
-                        Delete
+                        Delete<br />
                     </ion-option-button>
                 </ion-item>
                 <ion-item style="height:200px;" class="item-accordion" ng-show="isTripShown(trip)">
-                    Details
-                    <button class="button button-positive">More Details</button>
+                        Bilkostnad: {{ tripps.TripData.Biltotkost | currency: "Nok " }}<br />
+                        Reisetid: {{tripps.TripData.duration}} min.<br />
+                        Dato: {{trip.date | date: format : timezone}}<br />
+                        Avreise:  {{trip.time | date: "HH:mm:ss"}}
+                        <!--<button class="button button-positive">More Details</button>-->
+                    
                 </ion-item>
             </div>
         </ion-list>
