--- a/BlankCordovaApp1/BlankCordovaApp1/templates/menu.html
+++ b/BlankCordovaApp1/BlankCordovaApp1/templates/menu.html
@@ -40,7 +40,7 @@
                     <label class="item item-input">
                         <input type="text"   ng-model="trip.fuel" placeholder="Fuel" ng-required="false" default="13" />
                     </label>
-                        <button type="submit" class="button button-positive" menu-toggle="left">Search</button>
+                        <button type="submit" class="button button-positive" menu-toggle="left" onclick="history.go(0)">Search</button>
                 </form>
         </ion-list>
         </ion-content>
