--- a/BlankCordovaApp1/BlankCordovaApp1/templates/home.html
+++ b/BlankCordovaApp1/BlankCordovaApp1/templates/home.html
@@ -21,7 +21,8 @@
                             Parkering: {{tripps.TripData.Parkkost | currency: "Nok "}}<br />
                             Bussbillett: {{tripps.TripData.BussBillett | currency: "Nok "}}<br />
                             Bomkost: {{tripps.TripData.Bomkost | currency: "Nok "}}<br />
-                            Drivstoff: {{tripps.TripData.Drivekost | currency: "Nok "}}
+                            Drivstoff: {{tripps.TripData.Drivekost | currency: "Nok "}}<br />
+                            {{tripps.TripData.i.a}}
                             <!--<button class="button button-positive">More Details</button>-->
 
                         </ion-item>
